Section Meals complete

--- a/index.html
+++ b/index.html
@@ -90,6 +90,53 @@
       </div>
     </section>
 
+    <section class="section-meals">
+      <ul class="meals-showcase">
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/1.jpg" alt="image_1" />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/2.jpg" alt="image_2" />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/5.jpg" alt="image_5" />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/4.jpg" alt="image_4" />
+          </figure>
+        </li>
+      </ul>
+      <ul class="meals-showcase">
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/6.jpg" alt="image_6" />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/7.png" alt="image_7" />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/8.jpg" alt="image_8" />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/9.jpg" alt="image_9" />
+          </figure>
+        </li>
+      </ul>
+    </section>
+
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   </body>
 </html>
