--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </section>
 
     <section class="section-meals">
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
           <figure class="meal-photo">
             <img src="resources/img/1.jpg" alt="image_1" />
@@ -113,7 +113,7 @@
           </figure>
         </li>
       </ul>
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
           <figure class="meal-photo">
             <img src="resources/img/6.jpg" alt="image_6" />
@@ -135,6 +135,49 @@
           </figure>
         </li>
       </ul>
+    </section>
+
+    <section class="section-steps">
+      <div class="row">
+        <h2>How it works &mdash; 1, 2, 3</h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-2 step-box">
+          <img
+            class="app-screen"
+            src="resources/img/app-iPhone.png"
+            alt="iphone_logo"
+          />
+        </div>
+        <div class="col span-1-of-2 step-box">
+          <div class="work-steps">
+            <div>1</div>
+            <p>
+              Choose the subscription plan that best fits your needs and sign up
+              today.
+            </p>
+          </div>
+          <div class="work-steps">
+            <div>2</div>
+            <p>
+              Order your delicious meal using our mobile app or website. Or you
+              can even call us.
+            </p>
+          </div>
+          <div class="work-steps">
+            <div>3</div>
+            <p>
+              Enjoy your meals after less than 20 minutes. See you next time!
+            </p>
+          </div>
+          <a href="#" class="btn-app"
+            ><img src="resources/img/download-app-iphone.png" alt=""
+          /></a>
+          <a href="#" class="btn-app"
+            ><img src="resources/img/download-app-android.png" alt=""
+          /></a>
+        </div>
+      </div>
     </section>
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
