Section Cities Complete

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="row">
         <h2>Get food fast &mdash; not fast food</h2>
         <p class="long-copy">
-          Hello, we’re Omnifood, your new premium food delivery service. We know
+          Hello, we’re Kamayan, your new premium food delivery service. We know
           you’re always busy. No time for cooking. So let us take care of that,
           we’re really good at it, we promise!
         </p>
@@ -176,6 +176,81 @@
           <a href="#" class="btn-app"
             ><img src="resources/img/download-app-android.png" alt=""
           /></a>
+        </div>
+      </div>
+    </section>
+
+    <section class="section-cities">
+      <div class="row">
+        <h2>We're currently in these cities</h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-4 box">
+          <img src="resources/img/licab4.jfif" alt="" />
+          <h3>Licab</h3>
+          <div class="city-feature">
+            <ion-icon name="people-outline" class="icon-small"></ion-icon>1600+
+            happy eaters
+          </div>
+          <div class="city-feature">
+            <ion-icon name="star-outline" class="icon-small"></ion-icon>60+ top
+            chefs
+          </div>
+          <div class="city-feature">
+            <ion-icon name="logo-twitter" class="icon-small"></ion-icon
+            ><a href="#">@licab_nueva_ecija</a>
+          </div>
+        </div>
+
+        <div class="col span-1-of-4 box">
+          <img src="resources/img/licab3.jpg" alt="" />
+          <h3>Licab</h3>
+          <div class="city-feature">
+            <ion-icon name="people-outline" class="icon-small"></ion-icon>3700+
+            happy eaters
+          </div>
+          <div class="city-feature">
+            <ion-icon name="star-outline" class="icon-small"></ion-icon>160+ top
+            chefs
+          </div>
+          <div class="city-feature">
+            <ion-icon name="logo-twitter" class="icon-small"></ion-icon
+            ><a href="#">@licab_nueva_ecija</a>
+          </div>
+        </div>
+
+        <div class="col span-1-of-4 box">
+          <img src="resources/img/licab2.jfif" alt="" />
+          <h3>Licab</h3>
+          <div class="city-feature">
+            <ion-icon name="people-outline" class="icon-small"></ion-icon>2300+
+            happy eaters
+          </div>
+          <div class="city-feature">
+            <ion-icon name="star-outline" class="icon-small"></ion-icon>110+ top
+            chefs
+          </div>
+          <div class="city-feature">
+            <ion-icon name="logo-twitter" class="icon-small"></ion-icon
+            ><a href="#">@licab_nueva_ecija</a>
+          </div>
+        </div>
+
+        <div class="col span-1-of-4 box">
+          <img src="resources/img/licab.jfif" alt="" />
+          <h3>Licab</h3>
+          <div class="city-feature">
+            <ion-icon name="people-outline" class="icon-small"></ion-icon>1200+
+            happy eaters
+          </div>
+          <div class="city-feature">
+            <ion-icon name="star-outline" class="icon-small"></ion-icon>50+ top
+            chefs
+          </div>
+          <div class="city-feature">
+            <ion-icon name="logo-twitter" class="icon-small"></ion-icon
+            ><a href="#">@licab_nueva_ecija</a>
+          </div>
         </div>
       </div>
     </section>
