--- a/index.html
+++ b/index.html
@@ -255,6 +255,47 @@
       </div>
     </section>
 
+    <section class="section-testimonials">
+      <div class="row">
+        <h2>Our customers can't live without us</h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-3">
+          <blockquote>
+            Kamayan in Licab is just awesome! I just launched a startup which
+            leaves me with no time for cooking, so kamayan foods is a
+            life-saver. Now that I got used to it, I couldn't live without my
+            daily meals!
+            <cite
+              ><img src="resources/img/person1.png" alt="" />John Lester</cite
+            >
+          </blockquote>
+        </div>
+        <div class="col span-1-of-3">
+          <blockquote>
+            Kamayan in Licab is just awesome! I just launched a startup which
+            leaves me with no time for cooking, so kamayan foods is a
+            life-saver. Now that I got used to it, I couldn't live without my
+            daily meals!
+            <cite
+              ><img src="resources/img/person2.png" alt="" />John Lester</cite
+            >
+          </blockquote>
+        </div>
+        <div class="col span-1-of-3">
+          <blockquote>
+            Kamayan in Licab is just awesome! I just launched a startup which
+            leaves me with no time for cooking, so kamayan foods is a
+            life-saver. Now that I got used to it, I couldn't live without my
+            daily meals!
+            <cite
+              ><img src="resources/img/person3.jpg" alt="" />John Lester</cite
+            >
+          </blockquote>
+        </div>
+      </div>
+    </section>
+
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   </body>
 </html>
