Login Form and Landing Page complete

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="#">How it works</a></li>
             <li><a href="#">Our cities</a></li>
             <li><a href="#">Sign up</a></li>
+            <li><a href="login.html">Logout</a></li>
           </ul>
         </div>
       </nav>
@@ -305,8 +306,8 @@
           <div class="plan-box">
             <div>
               <h3>Premium</h3>
-              <p class="plan-price">$399 <span>/ month</span></p>
-              <p class="plan-price-meal">That's only 13.30$ per meal</p>
+              <p class="plan-price">&#8369;499 <span>/ month</span></p>
+              <p class="plan-price-meal">That's only &#8369;16.33 per meal</p>
             </div>
             <div>
               <ul>
@@ -349,8 +350,8 @@
           <div class="plan-box">
             <div>
               <h3>Pro</h3>
-              <p class="plan-price">$149 <span>/ month</span></p>
-              <p class="plan-price-meal">That's only 14.90$ per meal</p>
+              <p class="plan-price">&#8369;399 <span>/ month</span></p>
+              <p class="plan-price-meal">That's only &#8369;13.3 per meal</p>
             </div>
             <div>
               <ul>
@@ -393,7 +394,7 @@
           <div class="plan-box">
             <div>
               <h3>Starter</h3>
-              <p class="plan-price">19$ <span>/ meal</span></p>
+              <p class="plan-price">&#8369;19 <span>/ meal</span></p>
               <p class="plan-price-meal">&nbsp;</p>
             </div>
             <div>
@@ -516,6 +517,50 @@
         </form>
       </div>
     </section>
+
+    <footer>
+      <div class="row">
+        <div class="col span-1-of-2">
+          <ul class="footer-nav">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Pres</a></li>
+            <li><a href="#">iOs App</a></li>
+            <li><a href="#">Android App</a></li>
+          </ul>
+        </div>
+        <div class="col span-1-of-2">
+          <ul class="social-links">
+            <li>
+              <a href="#"
+                ><ion-icon name="logo-facebook" class="facebook-icon"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a href="#"
+                ><ion-icon name="logo-twitter" class="twitter-icon"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a href="#"
+                ><ion-icon name="logo-google" class="google-icon"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a href="#"
+                ><ion-icon
+                  name="logo-instagram"
+                  class="instagram-icon"
+                ></ion-icon
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <p>Copyright &copy; 2021 by Kamayan. All right reserved.</p>
+      </div>
+    </footer>
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   </body>
