Responsiveness Complete reg/forgot/login

--- a/forgot_pass.html
+++ b/forgot_pass.html
@@ -1,54 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kamayan Restaurant</title>
+
     <link rel="stylesheet" href="resources/css/forgotpass.css" />
     <link rel="stylesheet" href="vendors/css/normalize.css" />
     <link rel="stylesheet" href="vendors/css/grid.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <div class="row">
-          <div class="form-box">
-            <form action="login.html" method="post" autocomplete="off">
-              <h3>Request a new password</h3>
-              <div class="row">
-                <div class="col span-1-of-3">
-                  <label for="email">Email</label>
-                </div>
-                <div class="col span-2-of-3">
-                  <input
-                    type="email"
-                    name="email"
-                    id="email"
-                    placeholder="Enter your email"
-                    required
-                  />
-                </div>
-              </div>
+    <link rel="stylesheet" href="resources/css/forgot_queries.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet" />
+</head>
 
-              <div class="button">
-                <input
-                  type="submit"
-                  name="submit"
-                  class="btn btn-full"
-                  value="Confirm"
-                />
-              </div>
-            </form>
-          </div>
-        </div>
-      </nav>
+<body>
+    <header>
+        <nav>
+            <div class="row">
+                <div class="form-box">
+                    <form action="login.html" method="post" autocomplete="off">
+                        <h3>Request a new password</h3>
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label for="email">Email</label>
+                            </div>
+                            <div class="col span-2-of-3">
+                                <input type="email" name="email" id="email" placeholder="Enter your email" required />
+                            </div>
+                        </div>
+
+                        <div class="button">
+                            <input type="submit" name="submit" class="btn btn-full" value="Confirm" />
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </nav>
     </header>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-  </body>
+</body>
+
 </html>
