--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="vendors/css/normalize.css" />
     <link rel="stylesheet" href="vendors/css/grid.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
-        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 
@@ -47,8 +46,7 @@
         <div class="row">
             <h2>Get food fast &mdash; not fast food</h2>
             <p class="long-copy">
-                Hello, we’re Kamayan, your new premium food delivery service. We know you’re always busy. No time for
-                cooking. So let us take care of that, we’re really good at it, we promise!
+                Hello, we’re Kamayan, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!
             </p>
         </div>
         <div class="row js--wp-1">
@@ -56,32 +54,28 @@
                 <ion-icon name="infinite-outline" class="icon-big"></ion-icon>
                 <h3>Up to 365 days/year</h3>
                 <p>
-                    Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage.
-                    You can also choose to order more flexibly if that's your style.
+                    Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.
                 </p>
             </div>
             <div class="col span-1-of-4 box">
                 <ion-icon name="alarm-outline" class="icon-big"></ion-icon>
                 <h3>Ready in 20 minutes</h3>
                 <p>
-                    You're only twenty minutes away from your delicious and super healthy meals delivered right to your
-                    home. We work with the best chefs in each town to ensure that you're 100% happy.
+                    You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.
                 </p>
             </div>
             <div class="col span-1-of-4 box">
                 <ion-icon name="restaurant-outline" class="icon-big"></ion-icon>
                 <h3>100% organic</h3>
                 <p>
-                    All our vegetables are fresh, organic and local. Animals are raised without added hormones or
-                    antibiotics. Good for your health, the environment, and it also tastes better!
+                    All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!
                 </p>
             </div>
             <div class="col span-1-of-4 box">
                 <ion-icon name="cart-outline" class="icon-big"></ion-icon>
                 <h3>Order anything</h3>
                 <p>
-                    We don't limit your creativity, which means you can order whatever you feel like. You can also
-                    choose from our menu containing over 100 delicious meals. It's up to you!
+                    We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!
                 </p>
             </div>
         </div>
@@ -237,25 +231,19 @@
         <div class="row">
             <div class="col span-1-of-3">
                 <blockquote>
-                    Kamayan in Licab is just awesome! I just launched a startup which leaves me with no time for
-                    cooking, so kamayan foods is a life-saver. Now that I got used to it, I couldn't live without my
-                    daily meals!
+                    Kamayan in Licab is just awesome! I just launched a startup which leaves me with no time for cooking, so kamayan foods is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
                     <cite><img src="resources/img/person1.png" alt="" />John Lester</cite>
                 </blockquote>
             </div>
             <div class="col span-1-of-3">
                 <blockquote>
-                    Kamayan in Licab is just awesome! I just launched a startup which leaves me with no time for
-                    cooking, so kamayan foods is a life-saver. Now that I got used to it, I couldn't live without my
-                    daily meals!
+                    Kamayan in Licab is just awesome! I just launched a startup which leaves me with no time for cooking, so kamayan foods is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
                     <cite><img src="resources/img/person2.png" alt="" />John Lester</cite>
                 </blockquote>
             </div>
             <div class="col span-1-of-3">
                 <blockquote>
-                    Kamayan in Licab is just awesome! I just launched a startup which leaves me with no time for
-                    cooking, so kamayan foods is a life-saver. Now that I got used to it, I couldn't live without my
-                    daily meals!
+                    Kamayan in Licab is just awesome! I just launched a startup which leaves me with no time for cooking, so kamayan foods is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
                     <cite><img src="resources/img/person3.jpg" alt="" />John Lester</cite>
                 </blockquote>
             </div>
@@ -283,8 +271,7 @@
                                 <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order 24/7
                             </li>
                             <li>
-                                <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest
-                                creations
+                                <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest creations
                             </li>
                             <li>
                                 <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Free delivery
@@ -312,8 +299,7 @@
                                 <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order 24/7
                             </li>
                             <li>
-                                <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest
-                                creations
+                                <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest creations
                             </li>
                             <li>
                                 <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Free delivery
@@ -338,8 +324,7 @@
                                 <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>1 meal
                             </li>
                             <li>
-                                <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order from 8 am to 12
-                                pm
+                                <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order from 8 am to 12 pm
                             </li>
                             <li>
                                 <ion-icon name="close-outline" class="icon-small"></ion-icon>
