--- a/registration.html
+++ b/registration.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,94 +10,62 @@
     <link rel="stylesheet" href="vendors/css/normalize.css" />
     <link rel="stylesheet" href="vendors/css/grid.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
+    <link rel="stylesheet" href="resources/css/registration_queries.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet" />
+</head>
+
+<body>
     <header>
-      <nav>
-        <div class="row">
-          <h2 class="login-header">We're happy to serve you register now!</h2>
-        </div>
-        <div class="row">
-          <div class="form-box">
-            <form action="login.html" method="post" autocomplete="off">
-              <div class="row">
-                <div class="col span-1-of-3">
-                  <label for="fname">Firstname</label>
-                </div>
-                <div class="col span-2-of-3">
-                  <input
-                    type="text"
-                    name="fname"
-                    id="fname"
-                    placeholder="Enter your firstname"
-                    required
-                  />
-                </div>
-              </div>
-              <div class="row">
-                <div class="col span-1-of-3">
-                  <label for="lname">Lastname</label>
-                </div>
-                <div class="col span-2-of-3">
-                  <input
-                    type="text"
-                    name="lname"
-                    id="lname"
-                    placeholder="Enter your lastname"
-                    required
-                  />
-                </div>
-              </div>
-              <div class="row">
-                <div class="col span-1-of-3">
-                  <label for="number">Mobile Number</label>
-                </div>
-                <div class="col span-2-of-3">
-                  <input
-                    type="text"
-                    name="number"
-                    id="number"
-                    placeholder="Enter your number"
-                    required
-                  />
-                </div>
-              </div>
-              <div class="row">
-                <div class="col span-1-of-3">
-                  <label for="email">Email</label>
-                </div>
-                <div class="col span-2-of-3">
-                  <input
-                    type="email"
-                    name="email"
-                    id="email"
-                    placeholder="Enter your email"
-                    required
-                  />
-                </div>
-              </div>
+        <nav>
+            <div class="row">
+                <h2 class="login-header">We're happy to serve you register now!</h2>
+            </div>
+            <div class="row">
+                <div class="form-box">
+                    <form action="login.html" method="post" autocomplete="off">
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label for="fname">Firstname</label>
+                            </div>
+                            <div class="col span-2-of-3">
+                                <input type="text" name="fname" id="fname" placeholder="Enter your firstname" required />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label for="lname">Lastname</label>
+                            </div>
+                            <div class="col span-2-of-3">
+                                <input type="text" name="lname" id="lname" placeholder="Enter your lastname" required />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label for="number">Mobile Number</label>
+                            </div>
+                            <div class="col span-2-of-3">
+                                <input type="text" name="number" id="number" placeholder="Enter your number" required />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label for="email">Email</label>
+                            </div>
+                            <div class="col span-2-of-3">
+                                <input type="email" name="email" id="email" placeholder="Enter your email" required />
+                            </div>
+                        </div>
 
-              <div class="row">
-                <div class="col span-1-of-3">
-                  <label for="password">Password</label>
-                </div>
-                <div class="col span-2-of-3">
-                  <input
-                    type="password"
-                    name="password"
-                    id="password"
-                    class="password-form"
-                    placeholder="Enter your password"
-                    required
-                  />
-                </div>
-              </div>
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label for="password">Password</label>
+                            </div>
+                            <div class="col span-2-of-3">
+                                <input type="password" name="password" id="password" class="password-form" placeholder="Enter your password" required />
+                            </div>
+                        </div>
 
-              <!-- <div class="row">
+                        <!-- <div class="row">
                 <div class="col span-1-of-3">
                   <label for="email">Email</label>
                 </div>
@@ -111,21 +80,17 @@
                 </div>
               </div> -->
 
-              <div class="row">
-                <div class="button">
-                  <input
-                    type="submit"
-                    name="submit"
-                    class="btn btn-full"
-                    value="Register"
-                  />
+                        <div class="row">
+                            <div class="button">
+                                <input type="submit" name="submit" class="btn btn-full" value="Register" />
+                            </div>
+                        </div>
+                    </form>
                 </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </nav>
+            </div>
+        </nav>
     </header>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-  </body>
+</body>
+
 </html>
