--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="C:\xampp\htdocs\kamayan\resources\favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="C:\xampp\htdocs\kamayan\resources\favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="C:\xampp\htdocs\kamayan\resources\favicons/favicon-16x16.png">
+    <link rel="manifest" href="C:\xampp\htdocs\kamayan\resources\favicons/site.webmanifest">
+    <link rel="mask-icon" href="C:\xampp\htdocs\kamayan\resources\favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="C:\xampp\htdocs\kamayan\resources\favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="C:\xampp\htdocs\kamayan\resources\favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
