Minify some photos and css and added google analytics

--- a/index.html
+++ b/index.html
@@ -5,22 +5,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content=" Hello, we’re Kamayan, your new premium food delivery service. Order your delicious meal using our mobile app or website. Or you can even call us.">
     <title>Kamayan Restaurant</title>
-    <link rel="stylesheet" href="resources/css/style.css" />
+    <link rel="stylesheet" href="resources/css/style-min.css" />
     <link rel="stylesheet" href="resources/css/queries.css" />
     <link rel="stylesheet" href="vendors/css/normalize.css" />
     <link rel="stylesheet" href="vendors/css/grid.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
+        rel="stylesheet" />
+
+    <!-- This is favicon links -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="C:\xampp\htdocs\kamayan\resources\favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="C:\xampp\htdocs\kamayan\resources\favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="C:\xampp\htdocs\kamayan\resources\favicons/favicon-16x16.png">
-    <link rel="manifest" href="C:\xampp\htdocs\kamayan\resources\favicons/site.webmanifest">
-    <link rel="mask-icon" href="C:\xampp\htdocs\kamayan\resources\favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="C:\xampp\htdocs\kamayan\resources\favicons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/resources/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/resources/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/resources/favicons/site.webmanifest">
+    <link rel="mask-icon" href="/resources/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/resources/favicons/favicons/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="C:\xampp\htdocs\kamayan\resources\favicons/browserconfig.xml">
+    <meta name="msapplication-config" content="/resources/favicons/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 </head>
 
@@ -55,7 +60,8 @@
         <div class="row">
             <h2>Get food fast &mdash; not fast food</h2>
             <p class="long-copy">
-                Hello, we’re Kamayan, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!
+                Hello, we’re Kamayan, your new premium food delivery service. We know you’re always busy. No time for
+                cooking. So let us take care of that, we’re really good at it, we promise!
             </p>
         </div>
         <div class="row js--wp-1">
@@ -63,28 +69,32 @@
                 <ion-icon name="infinite-outline" class="icon-big"></ion-icon>
                 <h3>Up to 365 days/year</h3>
                 <p>
-                    Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.
+                    Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage.
+                    You can also choose to order more flexibly if that's your style.
                 </p>
             </div>
             <div class="col span-1-of-4 box">
                 <ion-icon name="alarm-outline" class="icon-big"></ion-icon>
                 <h3>Ready in 20 minutes</h3>
                 <p>
-                    You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.
+                    You're only twenty minutes away from your delicious and super healthy meals delivered right to your
+                    home. We work with the best chefs in each town to ensure that you're 100% happy.
                 </p>
             </div>
             <div class="col span-1-of-4 box">
                 <ion-icon name="restaurant-outline" class="icon-big"></ion-icon>
                 <h3>100% organic</h3>
                 <p>
-                    All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!
+                    All our vegetables are fresh, organic and local. Animals are raised without added hormones or
+                    antibiotics. Good for your health, the environment, and it also tastes better!
                 </p>
             </div>
             <div class="col span-1-of-4 box">
                 <ion-icon name="cart-outline" class="icon-big"></ion-icon>
                 <h3>Order anything</h3>
                 <p>
-                    We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!
+                    We don't limit your creativity, which means you can order whatever you feel like. You can also
+                    choose from our menu containing over 100 delicious meals. It's up to you!
                 </p>
             </div>
         </div>
@@ -94,7 +104,7 @@
         <ul class="meals-showcase clearfix">
             <li>
                 <figure class="meal-photo">
-                    <img src="resources/img/1.jpg" alt="image_1" />
+                    <img src="resources/img/1-min.jpg" alt="image_1" />
                 </figure>
             </li>
             <li>
@@ -121,7 +131,7 @@
             </li>
             <li>
                 <figure class="meal-photo">
-                    <img src="resources/img/7.png" alt="image_7" />
+                    <img src="resources/img/7-min.png" alt="image_7" />
                 </figure>
             </li>
             <li>
@@ -143,7 +153,7 @@
         </div>
         <div class="row">
             <div class="col span-1-of-2 step-box">
-                <img class="app-screen js--wp-2" src="resources/img/app-iPhone.png" alt="iphone_logo" />
+                <img class="app-screen js--wp-2" src="resources/img/app-iPhone-min.png" alt="iphone_logo" />
             </div>
             <div class="col span-1-of-2 step-box">
                 <div class="work-steps">
@@ -240,19 +250,25 @@
         <div class="row">
             <div class="col span-1-of-3">
                 <blockquote>
-                    Kamayan in Licab is just awesome! I just launched a startup which leaves me with no time for cooking, so kamayan foods is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+                    Kamayan in Licab is just awesome! I just launched a startup which leaves me with no time for
+                    cooking, so kamayan foods is a life-saver. Now that I got used to it, I couldn't live without my
+                    daily meals!
                     <cite><img src="resources/img/person1.png" alt="" />John Lester</cite>
                 </blockquote>
             </div>
             <div class="col span-1-of-3">
                 <blockquote>
-                    Kamayan in Licab is just awesome! I just launched a startup which leaves me with no time for cooking, so kamayan foods is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+                    Kamayan in Licab is just awesome! I just launched a startup which leaves me with no time for
+                    cooking, so kamayan foods is a life-saver. Now that I got used to it, I couldn't live without my
+                    daily meals!
                     <cite><img src="resources/img/person2.png" alt="" />John Lester</cite>
                 </blockquote>
             </div>
             <div class="col span-1-of-3">
                 <blockquote>
-                    Kamayan in Licab is just awesome! I just launched a startup which leaves me with no time for cooking, so kamayan foods is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+                    Kamayan in Licab is just awesome! I just launched a startup which leaves me with no time for
+                    cooking, so kamayan foods is a life-saver. Now that I got used to it, I couldn't live without my
+                    daily meals!
                     <cite><img src="resources/img/person3.jpg" alt="" />John Lester</cite>
                 </blockquote>
             </div>
@@ -280,7 +296,8 @@
                                 <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order 24/7
                             </li>
                             <li>
-                                <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest creations
+                                <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest
+                                creations
                             </li>
                             <li>
                                 <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Free delivery
@@ -308,7 +325,8 @@
                                 <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order 24/7
                             </li>
                             <li>
-                                <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest creations
+                                <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest
+                                creations
                             </li>
                             <li>
                                 <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Free delivery
@@ -333,7 +351,8 @@
                                 <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>1 meal
                             </li>
                             <li>
-                                <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order from 8 am to 12 pm
+                                <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order from 8 am to 12
+                                pm
                             </li>
                             <li>
                                 <ion-icon name="close-outline" class="icon-small"></ion-icon>
@@ -375,7 +394,7 @@
                 </div>
                 <div class="row">
                     <div class="col span-1-of-3">
-                        <label for="how">How did you find us?</label>
+                        <label>How did you find us?</label>
                     </div>
                     <div class="col span-2-of-3">
                         <select name="find-us" id="find-us">
@@ -458,6 +477,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="vendors/js/jquery.waypoints.min.js"></script>
     <script src="resources/js/script.js"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZVK0V98VW9"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-ZVK0V98VW9');
+    </script>
 </body>
 
 </html>
