--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@
                 <ul class="footer-nav">
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Blog</a></li>
-                    <li><a href="#">Pres</a></li>
-                    <li><a href="#">iOs App</a></li>
-                    <li><a href="#">Android App</a></li>
+                    <li><a href="#">Company</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms</a></li>
                 </ul>
             </div>
             <div class="col span-1-of-2">
@@ -467,9 +467,11 @@
                 </ul>
             </div>
         </div>
+<!--
         <div class="row">
             <p>Copyright &copy; 2021 by Kamayan. All right reserved.</p>
         </div>
+-->
     </footer>
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
