--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <section class="section-cities" id="province">
         <div class="row">
-            <h2>We're currently in these cities</h2>
+            <h2>We're currently in these provinces</h2>
         </div>
         <div class="row js--wp-3">
             <div class="col span-1-of-4 box">
@@ -467,7 +467,7 @@
                 </ul>
             </div>
         </div>
-<!--
+        <!--
         <div class="row">
             <p>Copyright &copy; 2021 by Kamayan. All right reserved.</p>
         </div>
